--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "magic-orange",
-  "displayName": "Magic Orange 🍊 Color theme",
-  "description": "Magic Orange 🍊 Color theme",
+  "displayName": "Magic Orange | Color theme",
+  "description": "Beautiful Color theme with mix of orange and arcane colors",
   "publisher": "anridev",
-  "version": "1.4.0",
+  "version": "1.5.0",
+  "icon": "images/store-icon.png",
   "repository": "https://github.com/secretnazideveloper/magic-orange-color-theme",
   "engines": {
     "vscode": "^1.44.0"
