--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       {
         "label": "Magic Orange",
         "uiTheme": "vs-dark",
-        "path": "./themes/MagicOrange-color-theme.json"
+        "path": "./themes/color-theme.json"
       }
     ]
   },
